fixed waybar wofi icon alignment

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -63,7 +63,7 @@ tooltip {
 
 }
 #custom-wofi {
-    margin-top: 2px;
+    margin-top: 1px;
     padding: 0px 5px;
     transition: all .3s ease;
     color: @foreground;
